--- a/experience.html
+++ b/experience.html
@@ -18,28 +18,23 @@
 
     <header>
       <img src="images/cover.jpg" alt="Drawing of Dave DeMonki aka David Pretlow" class="profile-image">
-      <h1 class="tag name">Hello, I’m Dave.</h1>
+      <h1 class="tag name">David Pretlow aka Dave DeMonki.</h1>
       <p class="tag location">I currently live in Atlanta.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m am a digital enthusiast and I am interested in developing a deeper understanding of our digital economy and its effects and potential for our communities and world.  I have maintained my own website since 2004.  In 2012 I began digging deeper into tech (outside of music tech) and I've worked to self educate for the past few years.  I am hoping to pursue a Computer Science degree at Georgia State University and some Tech Degrees from Treehouse so I can get deeper faster with some direction and community support.</p>
-        <p>I’ve been a professional musician for over 20 years. I've performed as a bassist, violinist, and guitarist primarily in the Destin, Florida area.  Although I gave some lessons previously, in 2007 I started teaching music in earnest.</p>
+        <h2>Experience</h2>
+        <p>Since 1993 I have been playing music for a living.  I played violin throughout my childhood ane trained with Classical Sympohony musicians in Birmingham, AL, Boston, MA, and Cleveland, OH as a violinist.  In high school I began teaching myself bass guitar and acoustic guitar.  After graduating college in 1992 I got an oppportunity to help form a band and move to Destin, Florida to perform in a restaurant 5 nights a week. </p>
+        <p>After several years of hard work on my guitar and singing skills, I began performing as a solo guitar player in a singer-songwriter format.  In 2005 I co-founded a band called "Beach Mice" with a friend and business partner.  In "Beach Mice" I performed on guitar and electric violin.  We had several good years where we played on the beach several days a week in the Spring and Summer seasons and worked in the Jimmy Buffett owned clubs/restaurants called "Margaritaville."</p>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Python</li>
-          <li>General Technology</li>
-        </ul>
-        <p>I’d like to get comfortable with web design and building great websites.  I would like to be fluent in multiple technologies and gain the skills needed to learn new technologies efficiently.</p>
+        <h2>Hobbies</h2>
+        <p>Becoming a professional musician blurred the lines between music as a hobby and music as a job.  Although I still love playing and music in general, performing for a living has changed my relationship with music significantly.  For my hobbies I enjoy cycling, cooking, and traveling.</p>
+        
+        <h2>Volunteer</h2>
+        <p>For the past 3 years I have enjoyed voluteering weekly to teach a guitar class at a local Senior Center</p>
       </div> 
 
     </main>
