--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
         <ul class="nav">
           <li class="name">David Pretlow</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="eperience.html">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/cover.jpg" alt="Drawing of Dave DeMonki aka David Pretlow" class="profile-image">
-      <h1 class="tag name">Hello, I’m Dave.</h1>
-      <p class="tag location">I currently live in Atlanta.</p>
+      <h1 class="tag name">Hello, I’m Dave</h1>
+      <p class="tag location">I live in Atlanta - I used to live at the beach</p>
+      <img src="images/AtlantaBeltlineBalloonCanopy.jpg" alt="Balloon Awning on Atlanta Beltline" class="atl-images rotate">
+      <img src="images/AtlantaBeltlineHikerArt.jpg" alt="Art on Atlanta Beltline" class="atl-images">
+
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m am a digital enthusiast and I am interested in developing a deeper understanding of our digital economy and its effects and potential for our communities and world.  I have maintained my own website since 2004.  In 2012 I began digging deeper into tech (outside of music tech) and I've worked to self educate for the past few years.  I am hoping to pursue a Computer Science degree at Georgia State University and some Tech Degrees from Treehouse so I can get deeper faster with some direction and community support.</p>
+        <p>I’m am a digital enthusiast and I am interested in developing a deeper understanding of our digital economy and its effects and potential for our communities and world.  I have owned and maintained my own website since 2004.  In 2012 I began digging deeper into tech (outside of music tech) and I've worked to self-educate for the past several years.</p>
         <p>I’ve been a professional musician for over 20 years. I've performed as a bassist, violinist, and guitarist primarily in the Destin, Florida area.  Although I gave some lessons previously, in 2007 I started teaching music in earnest.</p>
       </div> 
 
@@ -39,14 +42,14 @@
           <li>Python</li>
           <li>General Technology</li>
         </ul>
-        <p>I’d like to get comfortable with web design and building great websites.  I would like to be fluent in multiple technologies and gain the skills needed to learn new technologies efficiently.</p>
+        <p>I’d like to get comfortable with web design and building great websites.  I would like to be fluent in multiple technologies and gain the skills needed to learn new technologies efficiently.  I am hoping to pursue a Computer Science degree at Georgia State University and some Tech Degrees from Treehouse so I can get deeper faster with some direction and community support.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
         <li><a href="http://twitter.com/davedemonki" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/pub/dir/David/Pretlow" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/david-pretlow-7780138b" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://www.github.com/dpretlow" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2015, David Pretlow</p>
